--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<p>К сожалению, у меня нет фотографий моего Джунгарика, но я нашла его породу в интернете. На самом деле, я его немного боялась. Он как-то укусил моего папу, да и я очень чувствительна к прикосновениям.</p>
 			<img src="images/Homyak.jpg">
 			<p>Примерно через год я проснулась очередным утром и обнаружила пустую открытую клетку. Родители сказали мне, что он сбежал. И только в 18 лет я узнала, что он на самом деле умер :(</p>
-			После него у меня не было питомцев, <a href="">но....</a>
+			После него у меня не было питомцев, <a href="https://anasteishafil.github.io/lab3.3/">но....</a>
 		</div>
 	</section>
 </body>
